Sun Dec 21 05:14:58 CET 2014
l/openjpeg-1.5.1-i486-1_microlinux.txz: Added.
l/ladspa_sdk-1.13-i486-1_microlinux.txz: Added.
l/libmodplug-0.8.8.5-i486-1_microlinux.txz: Added.
l/OpenAL-1.16.0-i486-1_microlinux.txz: Added.
ap/opencore-amr-0.1.3-i486-1_microlinux.txz: Added.
l/opus-1.1-i486-1_microlinux.txz: Added.
l/rtmpdump-20131007_a9f353c-i486-1_microlinux.txz: Added.
d/orc-0.4.22-i486-1_microlinux.txz: Added.
l/schroedinger-1.0.11-i486-1_microlinux.txz: Added.
ap/speex-1.2rc1-i486-1_microlinux.txz: Added.
ap/twolame-0.3.13-i486-1_microlinux.txz: Added.
l/libvpx-1.3.0-i486-1_microlinux.txz: Added.
l/xvidcore-1.3.2-i486-1_microlinux.txz: Added.
xap/ffmpeg-2.1.5-i686_custom-1_microlinux.txz: Added.
l/libcdaudio-0.99.12p2-i486-1_microlinux.txz: Added.
ap/dirac-1.0.2-i486-1_microlinux.txz: Added.
l/libdca-0.0.5-i486-1_microlinux.txz: Added.
l/libdvdnav-4.2.0-i486-1_microlinux.txz: Added.
ap/faad2-2.7-i486-1_microlinux.txz: Added.
l/libkate-0.4.1-i486-1_microlinux.txz: Added.
l/libmms-0.6.2-i486-1_microlinux.txz: Added.
l/libmusicbrainz-2.1.5-i486-1_microlinux.txz: Added.
l/soundtouch-1.7.1-i486-1_microlinux.txz: Added.
l/gst-plugins-bad-0.10.23-i486-1_microlinux.txz: Added.
l/a52dec-0.7.4-i486-1_microlinux.txz: Added.
l/libmpeg2-0.5.1-i486-1_microlinux.txz: Added.
l/gst-plugins-ugly-0.10.19-i486-1_microlinux.txz: Added.
l/libdv-1.0.0-i486-1_microlinux.txz: Added.
l/libcuefile-r475-i486-1_microlinux.txz: Added.
ap/musepack-tools-r475-i486-1_microlinux.txz: Added.
+--------------------------+
Sat Dec 20 07:18:46 CET 2014
l/libdc1394-2.2.2-i486-1_microlinux.txz: Added.
l/libmp4v2-2.0.0-i486-1_microlinux.txz: Added.
ap/faac-1.28-i486-1_microlinux.txz: Added.
l/frei0r-1.4-i486-1_microlinux.txz: Added.
l/gsm-1.0.13-i486-1_microlinux.txz: Added.
l/libiec61883-1.2.0-i486-1_microlinux.txz: Added.
l/libavc1394-0.5.4-i486-1_microlinux.txz: Added.
l/libilbc-2.0.2-i486-1_microlinux.txz: Added.
+--------------------------+
Fri Dec 19 06:38:07 CET 2014