@@ -1,0 +1,12 @@
+         |-----handy-ruler------------------------------------------------------|
+libdvdcss: libdvdcss (DVD decryption library)
+libdvdcss:
+libdvdcss: libdvdcss is a cross-platform library for transparent DVD device
+libdvdcss: access with on-the-fly CSS decryption.  It is used by libdvdread
+libdvdcss: and most DVD players such as VLC because of its portability and 
+libdvdcss: because, unlike similar libraries, it does not require your DVD 
+libdvdcss: drive to be region locked.
+libdvdcss:
+libdvdcss: 
+libdvdcss:
+libdvdcss: Package created by Niki Kovacs <info@microlinux.fr>
