@@ -1,0 +1,3 @@
+all-*.tar.bz2
+essential-*.tar.bz2
+mplayer-codecs-*.rpm
