@@ -1,0 +1,12 @@
+              |-----handy-ruler------------------------------------------------------|
+mplayer-codecs: mplayer-codecs (Codecs for MPlayer)
+mplayer-codecs: 
+mplayer-codecs: This is a repackaging of the codecs distributed by the MPlayer team.
+mplayer-codecs:
+mplayer-codecs:
+mplayer-codecs:
+mplayer-codecs:
+mplayer-codecs:
+mplayer-codecs:
+mplayer-codecs:
+mplayer-codecs: Package created by Niki Kovacs <info@microlinux.fr>
